UI improvements for the view image modal, Changed 'Camera Name' to 'Camera Location'

--- a/src/web/templates/_camera_form.html
+++ b/src/web/templates/_camera_form.html
@@ -10,7 +10,7 @@
     
     <div class="space-y-4">
         <div>
-            <label for="name" class="block text-sm font-medium text-gray-700 mb-2">Camera Name</label>
+            <label for="name" class="block text-sm font-medium text-gray-700 mb-2">Camera Location</label>
             <input type="text" name="name" id="name" required
                    class="w-full p-3 border border-gray-300 rounded-lg bg-white bg-opacity-80 text-base transition-all duration-300 ease-in-out focus:outline-none focus:border-turtle-green focus:ring-4 focus:ring-turtle-green focus:ring-opacity-20"
                    value="{{ camera.name if camera else '' }}">
